--- a/Application/home/Tpl/Index/index.html
+++ b/Application/home/Tpl/Index/index.html
@@ -70,9 +70,13 @@
 <body>
 <div class="container">
     <h2 class="text-success text-center mytitle "> Notus 项目列表 </h2>
-    <div>
-        <button id="add" class="btn btn-info">添加新项目</button>
-    </div>
+    <if condition="$admin">
+        <div>
+            <button id="add" class="btn btn-info">添加新项目</button>
+            <a href="__URL__/../Man/logout" class="btn btn-primary">退出</a>
+        </div>
+    </if>
+
     <table class="table table-striped table-bordered table-hover" id="mytable">
         <thead>
         <tr class="danger">
@@ -81,7 +85,9 @@
             <th class="item_create">添加时间</th>
             <th class="item_modify">修改时间</th>
             <th class="item_des">说明</th>
-            <th class="item_op">操作</th>
+            <if condition="$admin">
+                <th class="item_op">操作</th>
+            </if>
         </tr>
         </thead>
         <tbody>
@@ -92,10 +98,12 @@
                 <td>{{$vo.create_at}}</td>
                 <td>{{$vo.modify_at}}</td>
                 <td>{{$vo.description}}</td>
-                <td class="item_op">
-                    <a href="__URL__/mod/id/{{$vo.id}}" class="btn btn-sm btn-primary">修改</a>
-                    <a href="__URL__/del/id/{{$vo.id}}" class="btn btn-sm btn-danger">删除</a>
-                </td>
+                <if condition="$admin">
+                    <td class="item_op">
+                        <a href="__URL__/mod/id/{{$vo.id}}" class="btn btn-sm btn-primary">修改</a>
+                        <a href="__URL__/del/id/{{$vo.id}}" class="btn btn-sm btn-danger">删除</a>
+                    </td>
+                </if>
             </tr>
         </volist>
         </tbody>
